# ChangeLog for x11-misc/3ddesktop
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header

  17 Jun 2003; Seemant Kulleen <seemant@gentoo.org> 3ddesktop-0.2.4.ebuild:
  added freetype-1 to DEPEND. Thanks to: Jeremy Huddleston
  <jeremyhu@cory.eecs.berkeley.edu> in bug #21878

  12 Jun 2003; <msterret@gentoo.org> 3ddesktop-0.2.4.ebuild:
  fix Header

  15 May 2003; Lars Weiler <pylon@gentoo.org> 3ddesktop-0.2.4.ebuild:
  Set ~ppc in KEYWORDS

*3ddesktop-0.2.4 (01 Dec 2002)

  26 Mar 2003; Graham Forest <vladimir@gentoo.org> 3ddesktop-0.2.4.ebuild:
  Automated cleanup of LICENSE

  01 Dec 2002; Matt Keadle <mkeadle@gentoo.org> 3ddesktop-0.2.4.ebuild
  files/digest-3ddesktop-0.2.4:

  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. Thanks to Loke for submitting this ebuild.