@@ -1,3 +1,5 @@
 MD5 4e095ce17d3f1d1efb85bdc3586707de 3ddesktop-0.2.4.ebuild 676
-MD5 c08c2435c30536e22d5629e448e78300 ChangeLog 861
+MD5 d1a94393d54ea5b8c147c5394adbbcbf ChangeLog 989
+MD5 e7a33d5662d3438c8289b15ce1777789 3ddesktop-0.2.5.ebuild 569
 MD5 8bc61e239b06f871846230010633e400 files/digest-3ddesktop-0.2.4 67
+MD5 31e42c8733a6ba3e71bdcc1fc2d9d340 files/digest-3ddesktop-0.2.5 67
